# djctools

./: .gitignore  README.md  merge_repo.py  pyproject.toml
.github/workflows/: run_tests.yml
examples/: .gitignore  mnist_training_example.py
src/djctools/: dataparallel.py  module_extensions.py  parallel.py  threading_context.py  training.py  wandb_tools.py
tests/: test_all.py  test_logging_module.py  test_loss_module.py  test_trainer.py  test_wandb_wrapper.py
workflows/: publish_djctools.yml
